# moreorless

./: .vars.ini  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: build.yml
moreorless/: __init__.py  click.py  combined.py  combined_types.py  patch.py
moreorless/tests/: __main__.py  click.py  combined.py  general.py  patch.py
